# HMO_project

./: .gitignore  1  README.md  log_file  pyproject.toml  rail507.1.sol  rail516.1.sol  rail582.1.sol  results.csv  sc_solver  solver.py
solutions/: rail2536.1.sol  rail2536.2.sol  rail2586.1.sol  rail2586.2.sol  rail4284.1.sol  rail4284.2.sol  rail4872.1.sol  rail4872.2.sol  rail507.10.sol  rail507.11.sol  rail507.12.sol  rail507.13.sol  rail507.14.sol  rail507.15.sol  rail507.16.sol  rail507.17.sol  rail507.18.sol  rail507.19.sol  rail507.20.sol  rail507.21.sol  rail507.22.sol  rail507.23.sol  rail507.24.sol  rail507.25.sol  rail507.26.sol  rail507.27.sol  rail507.28.sol  rail507.29.sol  rail507.3.sol  rail507.30.sol  rail507.31.sol  rail507.32.sol  rail507.33.sol  rail507.34.sol  rail507.35.sol  rail507.36.sol  rail507.37.sol  rail507.38.sol  rail507.39.sol  rail507.4.sol  (+27 more)
solutions/greedy/: rail507.1.sol  rail516.1.sol  rail582.1.sol  results.csv
solutions/greedy_plus_local_search/: rail507.5.sol  rail507.6.sol  rail582.2.sol  results.csv
solutions/greedy_plus_local_search_2opt/: rail507.1.sol  rail507.2.sol  rail507.3.sol  rail507.4.sol  rail507.8.sol  rail516.2.sol  rail582.1.sol  rail582.2.sol  rail582.5.sol  results.csv
solutions/ils_hill_climbing/: rail507.3.sol  rail507.4.sol  rail516.2.sol  rail516.3.sol  rail516.4.sol  rail582.2.sol  rail582.3.sol  rail582.4.sol  results.csv
solutions/ils_simulated_annealing/: rail507.2.sol  rail507.3.sol  rail516.1.sol  rail516.3.sol  results.csv
src/algorithms/: __init__.py  pipelines.py
src/heuristics/: greedy.py  (+4 more)
(+18 files in other folders)
